I wrote a screenplay instead of this site.

--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,21 @@
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+    <div class="header">
+      <span>This site is dedicated to all true Jake's. Jacob's are fakes.</span>
+    </div>
+
+    <div class="left-nav">
+      <div class="nav-item">
+        <img src="./images/jakeface.png"/>
+      </div>
+      <div class="nav-item">Jake</div>
+      <div class="nav-item">Ellen</div>
+      <div class="nav-item">Jimmer</div>
+      <div class="nav-item">Leon</div>
+      <div class="nav-item">Beth</div>
+
+    </div>
 
     <!-- Add your site or application content here -->
     <div class="container" ng-view=""></div>
