font-awesome is awesome

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+    <link rel="stylesheet" href="styles/css/font-awesome.css">
   </head>
   <body ng-app="jakenotjacobApp">
     <!--[if lt IE 7]>
@@ -30,11 +31,21 @@
       <div class="nav-item">
         <img src="./images/jakeface.png"/>
       </div>
-      <div class="nav-item">Jake</div>
-      <div class="nav-item">Ellen</div>
-      <div class="nav-item">Jimmer</div>
-      <div class="nav-item">Leon</div>
-      <div class="nav-item">Beth</div>
+      <div class="nav-item">
+        <span><i class="fa fa-comments margin-right-small" style="font-size:20px;"></i>Blog</span>
+      </div>
+      <div class="nav-item">
+        <span><i class="fa fa-video-camera margin-right-small" style="font-size:20px;"></i>TPG</span>
+      </div>
+      <div class="nav-item">
+        <span><i class="fa fa-heart margin-right-small" style="font-size:20px;"></i>On Serve</span>
+      </div>
+      <div class="nav-item">
+        <span><i class="fa fa-money margin-right-small" style="font-size:20px;"></i>Gold Watch</span>
+      </div>
+      <div class="nav-item">
+        <span><i class="fa fa-pencil margin-right-small" style="font-size:20px;"></i>Writings</span>
+      </div>
 
     </div>
 
