all funned out for the night. games over

--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,8 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angularfire/angularfire.js"></script>
+    <script src="bower_components/textAngular/textAngular.js"></script>
+    <script src="bower_components/textAngular/textAngular-sanitize.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -85,6 +87,7 @@
         <script src="scripts/blog/blogCtrl.js"></script>
         <script src="scripts/main/mainCtrl.js"></script>
         <script src="scripts/project/projectCtrl.js"></script>
+        <script src="scripts/admin/adminCtrl.js"></script>
         <!-- endbuild -->
 </body>
 </html>
