--- a/app/index.html
+++ b/app/index.html
@@ -88,6 +88,7 @@
         <script src="scripts/main/mainCtrl.js"></script>
         <script src="scripts/project/projectCtrl.js"></script>
         <script src="scripts/admin/adminCtrl.js"></script>
+        <script src="scripts/common/comments.js"></script>
         <!-- endbuild -->
 </body>
 </html>
