--- a/app/index.html
+++ b/app/index.html
@@ -79,6 +79,7 @@
     <script src="bower_components/angularfire/angularfire.js"></script>
     <script src="bower_components/textAngular/textAngular.js"></script>
     <script src="bower_components/textAngular/textAngular-sanitize.js"></script>
+    <script src="bower_components/lodash/dist/lodash.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
