a couple of comment type of things. css is messed

--- a/app/scripts/admin/admin.html
+++ b/app/scripts/admin/admin.html
@@ -1,7 +1,7 @@
 <div class="admin">
-  <div>
-    <input ng-model="postTitle"/>
+  <div class="margin-vertical-small">
+    <input ng-model="postTitle" placeholder="Post Title"/>
   </div>
-  <div text-angular ng-model="newPost"></div>
-  <div ng-click="leeroyJenkins()">Yolo Post</div>
+  <div class="margin-vertical-small" text-angular ng-model="newPost"></div>
+  <div class="button margin-vertical-small" ng-click="leeroyJenkins()">Yolo Post</div>
 </div>
