realllll basic auth.

--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,7 @@
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/firebase/firebase.js"></script>
+    <script src="bower_components/firebase-simple-login/firebase-simple-login.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
@@ -90,6 +91,7 @@
         <script src="scripts/main/mainCtrl.js"></script>
         <script src="scripts/project/projectCtrl.js"></script>
         <script src="scripts/admin/adminCtrl.js"></script>
+        <script src="scripts/login/loginCtrl.js"></script>
         <script src="scripts/common/comments.js"></script>
         <!-- endbuild -->
 </body>
