worked on the build a little. Everything works but font-awesome...

--- a/app/scripts/login/login.html
+++ b/app/scripts/login/login.html
@@ -1,4 +1,4 @@
-<div class"login">
+<div class="login">
   <input ng-model="email" placeholder="email"/>
   <input ng-model="password" type="password"/>
   <div class="button" ng-click="login()">Login</div>
