fixed some obvious probles and put in a quick like directive.

--- a/app/index.html
+++ b/app/index.html
@@ -99,6 +99,7 @@
         <script src="scripts/admin/adminCtrl.js"></script>
         <script src="scripts/login/loginCtrl.js"></script>
         <script src="scripts/common/comments.js"></script>
+        <script src="scripts/common/like.js"></script>
         <!-- endbuild -->
 </body>
 </html>
