--- a/app/index.html
+++ b/app/index.html
@@ -88,12 +88,14 @@
     <script src="bower_components/angularfire/angularfire.js"></script>
     <script src="bower_components/lodash/dist/lodash.compat.js"></script>
     <script src="bower_components/textAngular/textAngular.js"></script>
+    <script src="bower_components/jquery/dist/jquery.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/blog/blogCtrl.js"></script>
+        <script src="scripts/blog/postCtrl.js"></script>
         <script src="scripts/main/mainCtrl.js"></script>
         <script src="scripts/project/projectCtrl.js"></script>
         <script src="scripts/admin/adminCtrl.js"></script>
